将帮助信息写入readme

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:git
-  repository: git@github.com:w9lsky/kaffa.git
+  type: git
+  repo: git@github.com:w9lsky/w9lsky.github.io.git
   branch: master
